update to root directory

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 
     <script>
-        const csvFilePath = "../Datasets/T1Ds - Sheet1.csv"; // Ensure correct path
+        const csvFilePath = "T1Ds - Sheet1.csv"; // Ensure correct path
 
         let players = [];
 
