--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
         .links-container a:hover {
             color: darkred;
         }
+        /* ✅ Widen and Increase Height of the Iframe */
         .iframe-container {
             display: none;
-            width: 100%;
-            max-width: 800px;
-            height: 400px;
-            border: 1px solid #ccc;
+            width: 90%;
+            max-width: 1200px;
+            height: 600px;
+            border: 2px solid #ccc;
             margin-top: 20px;
             overflow: auto;
         }
@@ -96,7 +97,7 @@
     </div>
 
     <script>
-        const csvFilePath = "T1Ds - Sheet1.csv"; // Ensure correct path
+        const csvFilePath = "T1Ds - Sheet1.csv";
 
         let players = [];
 
